--- a/index.html
+++ b/index.html
@@ -16,3 +16,19 @@
             text-align: center;
             padding: 20px;
         }
+        .nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+        .nav div {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 20px;
+            text-decoration: none;
+        }
+        .nav div:hover {
+            background-color: #ddd;
+            color: black;
+        }
