Menambahkan .content dan .footer

--- a/index.html
+++ b/index.html
@@ -32,3 +32,18 @@
             background-color: #ddd;
             color: black;
         }
+        .content {
+            padding: 20px;
+        }
+        .footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
