menambahkan <div> dan <span>

--- a/index.html
+++ b/index.html
@@ -47,3 +47,29 @@
     </style>
 </head>
 <body>
+  <!-- Header -->
+  <div class="header">
+    <span>Halaman Web Sederhana</span>
+</div>
+
+<!-- Navigasi -->
+<div class="nav">
+    <div><span>Home</span></div>
+    <div><span>Artikel</span></div>
+    <div><span>Tentang</span></div>
+    <div><span>Kontak</span></div>
+</div>
+
+<!-- Konten Artikel -->
+<div class="content">
+    <h2>Judul Artikel</h2>
+    <p>Ini adalah contoh artikel pada halaman web sederhana. Artikel ini menggunakan elemen <code>&lt;div&gt;</code> untuk struktur dan elemen <code>&lt;span&gt;</code> untuk konten teks. Anda dapat menambahkan lebih banyak informasi sesuai kebutuhan.</p>
+</div>
+
+<!-- Footer -->
+<div class="footer">
+    <span>&copy; 2024 Halaman Web Sederhana</span>
+</div>
+
+</body>
+</html>
